--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,11 @@
 
 buildscript {
     repositories {
-        maven {
-            url "http://maven.oa.com/nexus/content/groups/androidbuild"
-        }
+        jcenter()
     }
     dependencies {
-        classpath "io.realm:realm-gradle-plugin:1.0.0"
         classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath "io.realm:realm-gradle-plugin:1.0.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,12 +14,9 @@ buildscript {
 
 allprojects {
     repositories {
-        maven {
-            url "http://maven.oa.com/nexus/content/groups/androidbuild"
-        }
+        jcenter()
     }
 }
-
 
 task clean(type: Delete) {
     delete rootProject.buildDir
